--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>大事件首页面</title>
     <!-- 引入iconfont.css -->
     <link rel="stylesheet" href="./assets/fonts/iconfont.css">
     <!-- 引入layui.css -->
@@ -24,8 +24,10 @@
                 <!-- 头部区域（可配合layui已有的水平导航） -->
                 <ul class="layui-nav layui-layout-right">
                     <li class="layui-nav-item">
-                        <a href="javascript:;">
-                            <img src="http://t.cn/RCzsdCq" class="layui-nav-img" /> 个人中心
+                        <a href="javascript:;" class="userinfo">
+                            <img src="http://t.cn/RCzsdCq" class="layui-nav-img" />
+                            <span class="text-avater">A</span> 个人中心
+
                         </a>
                         <dl class="layui-nav-child">
                             <dd><a href="">基本资料</a></dd>
@@ -33,12 +35,22 @@
                             <dd><a href="">重置密码</a></dd>
                         </dl>
                     </li>
-                    <li class="layui-nav-item"><a href="">退出</a></li>
+                    <li class="layui-nav-item">
+                        <a href="javascript:;" id="btnLogOut">
+                            <span class="iconfont icon-tuichu"></span>退出
+                        </a>
+                    </li>
                 </ul>
             </div>
 
             <div class="layui-side layui-bg-black">
                 <div class="layui-side-scroll">
+                    <div href="javascript:;" class="userinfo">
+                        <img src="http://t.cn/RCzsdCq" class="layui-nav-img" />
+
+                        <span class="text-avater">A</span>
+                        <span id="welcome">欢迎 ***</span>
+                    </div>
                     <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
                     <ul class="layui-nav layui-nav-tree" lay-shrink="all">
                         <li class="layui-nav-item layui-nav-itemed">
@@ -81,6 +93,12 @@
         </div>
         <!-- 导入 layui.all.js 的JS文件 -->
         <script src="./assets/lib/layui/layui.all.js"></script>
+        <!-- 导入jQuery -->
+        <script src="./assets/lib/jquery.js"></script>
+        <!-- 导入自己封装的baseAPI -->
+        <script src="./assets/js/baseAPI.js"></script>
+        <!-- 导入自己的js -->
+        <script src="./assets/js/index.js"></script>
     </body>
 
 </html>
